# sshd_backdoor

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/bpf/: backdoor.bpf.c  common.h  demo.bpf.c  demo.h  map.h  syscall_exit.bpf.h  syscall_getdents64.bpf.h  syscall_openat.bpf.h  syscall_read.bpf.h  vmlinux.h
test/: id  id.pub  key_len  mock_sshd.py
