[package]
name = "sshd_backdoor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.19"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
libc = "0.2"

[build-dependencies]
libbpf-cargo = "0.13"
